--- a/gutp-types/Cargo.toml
+++ b/gutp-types/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eightfish = {path = "../../eightfish"}
+eightfish-derive = {path = "../../eightfish/eightfish-derive"}
+
