update subspace module to latest eightfish.
Signed-off-by: Daogang Tang <daogangtang@gmail.com>

--- a/gutp/Cargo.toml
+++ b/gutp/Cargo.toml
@@ -29,3 +29,4 @@ eightfish-derive = {path = "../../eightfish/eightfish-derive"}
 spin_worker = {path = "../../eightfish/spin_worker"}
 
 gutp-types = {path = "../gutp-types/"}
+sql-builder = "3.1"
