--- a/gutp-types/Cargo.toml
+++ b/gutp-types/Cargo.toml
@@ -12,4 +12,4 @@ serde = { version = '1.0', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
 eightfish = {path = "../../eightfish"}
 eightfish-derive = {path = "../../eightfish/eightfish-derive"}
-sql_builder = "3.1"
+sql-builder = "3.1"
