--- a/gutp-types/Cargo.toml
+++ b/gutp-types/Cargo.toml
@@ -10,6 +10,8 @@ spin-sdk ={ git = "https://github.com/fermyon/spin", tag = "v1.1.0"}
 json-digest = "0.0.16"
 serde = { version = '1.0', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
-eightfish = {path = "../../eightfish"}
-eightfish-derive = {path = "../../eightfish/eightfish-derive"}
+#eightfish = {path = "../../eightfish"}
+#eightfish-derive = {path = "../../eightfish/eightfish-derive"}
+eightfish = { package = "eightfish", git = "https://github.com/eightfish-org/eightfish"}
+eightfish-derive = {package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish"}
 sql-builder = "3.1"
