add missing db field, add missiong docker compose file

--- a/gutp-docker-compose-1node.yml
+++ b/gutp-docker-compose-1node.yml
@@ -7,7 +7,7 @@ services:
       - "8000:8000"
     volumes: 
       - ./data/blockchain-data:/data
-      - ./node:/vintage
+      - ./vintage:/vintage
     depends_on:
       - cache_1
   
