--- a/vintage/config.yml
+++ b/vintage/config.yml
@@ -1,10 +1,10 @@
 dev_mode: true
 blockchain:
-  db_path: /data/blockchain.db
+  db_path: /data/blockchain1.db
 proxy:
   redis_addr: redis://cache_1:6379
 node:
-  block_interval: 1000
+  block_interval: 500
   name: Node1
   listen_addr: 172.28.1.1:8001
   propose_weight: 1
