--- a/gutp-types/Cargo.toml
+++ b/gutp-types/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-spin-sdk ={ git = "https://github.com/fermyon/spin", tag = "v1.1.0"}
+spin-sdk = "3.0"
 json-digest = "0.0.16"
 serde = { version = '1.0', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
-#eightfish = {path = "../../eightfish"}
-#eightfish-derive = {path = "../../eightfish/eightfish-derive"}
-eightfish = { package = "eightfish", git = "https://github.com/eightfish-org/eightfish"}
-eightfish-derive = {package = "eightfish-derive", git = "https://github.com/eightfish-org/eightfish"}
+
+eightfish-sdk = { path = "../../eightfish/sdk" }
+eightfish-derive = { path = "../../eightfish/eightfish-derive" }
+
 sql-builder = "3.1"
